# servant-state-graph

./: README.md  choclety-hask.cabal  servant-state-graph.cabal  stack.yaml
app/: Main.hs  index.mustache
docs/: doc-index-58.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-E.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index.html  viewer.html
docs/examples/: shoppe1.js
docs/servant-state-graph/: SampleAPI.html  SampleHALAPI.html  Servant-HAL-Server.html  Servant-HAL.html  Servant-StateGraph-Graph-JSON.html  Servant-StateGraph-Graph-Links.html  Servant-StateGraph-Graph-RichEndpoint.html  Servant-StateGraph-Graph-Server.html  Servant-StateGraph-Graph-Types.html  Servant-StateGraph-Graph.html  Servant-StateGraph.html  doc-index-58.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-E.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  mini_SampleAPI.html  mini_SampleHALAPI.html  mini_Servant-HAL-Server.html  mini_Servant-HAL.html  mini_Servant-StateGraph-Graph-JSON.html  mini_Servant-StateGraph-Graph-Links.html  (+6 more)
examples/: shoppe1.js
server/: Main.hs
src/: Choclety.hs  SampleAPI.hs  SampleHALAPI.hs
src/Choclety/: Graph.hs
src/Choclety/Graph/: JSON.hs  Server.hs
src/Servant/: HAL.hs  StateGraph.hs
src/Servant/HAL/: Server.hs
src/Servant/StateGraph/: Graph.hs
src/Servant/StateGraph/Graph/: JSON.hs  Links.hs  RichEndpoint.hs  Server.hs  Types.hs
test/Choclety/: GraphSpec.hs
test/Choclety/Graph/: JSONSpec.hs
test/Servant/: HALSpec.hs
test/Servant/HAL/: ServerSpec.hs
test/Servant/StateGraph/: GraphSpec.hs
test/Servant/StateGraph/Graph/: JSONSpec.hs  RichEndpointSpec.hs
