name:                servant-state-graph
version:             0.1.0.0
synopsis:            Generate graphs from Servant API types
description:         Please see README.md
homepage:            https://github.com/corajr/servant-state-graph#readme
license:             BSD3
license-file:        LICENSE
author:              Cora Johnson-Roberson
maintainer:          cora.johnson.roberson@gmail.com
copyright:           2017 Cora Johnson-Roberson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SampleAPI
                     , Servant.HAL
                     , Servant.StateGraph
                     , Servant.StateGraph.Graph
                     , Servant.StateGraph.Graph.JSON
                     , Servant.StateGraph.Graph.Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , unordered-containers
                     , bytestring
                     , data-default
                     , http-media
                     , network-uri
                     , text
                     , mustache
                     , servant-server
                     , servant-docs
                     , hashable
                     , http-types
                     , wai
                     , wai-logger
                     , warp
                     , QuickCheck
                     , derive
                     , mtl
                     , fgl
                     , lens
                     , servant >= 0.10
  default-language:    Haskell2010

executable state-graph
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-state-graph
                     , bytestring
                     , aeson
                     , servant
  default-language:    Haskell2010

executable state-graph-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-state-graph
  default-language:    Haskell2010

test-suite state-graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-state-graph
                     , aeson
                     , unordered-containers
                     , hspec
                     , QuickCheck
                     , fgl
                     , bytestring
                     , text
                     , servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite state-graph-doctest
  type:                exitcode-stdio-1.0
  main-is:             doctest-driver.hs
  build-depends:       base
                     , servant-state-graph
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  hs-source-dirs:      test

source-repository head
  type:     git
  location: https://github.com/corajr/servant-state-graph
